--- a/ASSIGNMENTS/Assignment-8/package.json
+++ b/ASSIGNMENTS/Assignment-8/package.json
@@ -10,6 +10,8 @@
   "author": "Shivam",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.4.7",
+    "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "method-override": "^3.0.0",
